# Kodetron

./: .clang-format  .clang-tidy  API_EXAMPLES.md  BACKEND_GUIDE.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  INSTALL_DEPENDENCIES.md  LICENSE  README.md  build_backend.bat  build_backend_qmake.bat  compile_with_database.bat  database_test.cpp  dev_init.ps1  dev_init.sh  migrate_repositories.bat  test_database.bat
backend/: CMakeLists.txt  README.md  main_server.cpp
backend/controllers/: CodeforcesAccountsController.cpp  CodeforcesAccountsController.h  ContestsController.cpp  ContestsController.h  SnippetsController.cpp  SnippetsController.h  TemplatesController.cpp  TemplatesController.h  ThemesController.cpp  ThemesController.h  UsersController.cpp  UsersController.h
backend/middleware/: AuthMiddleware.cpp  AuthMiddleware.h
backend/utils/: JsonSerializer.cpp  JsonSerializer.h
database/: README.md  schema.sql
database_test/: CMakeLists.txt
src/: main.cpp
src/App/: App.cpp  App.h  App.qss
src/DataBase/: DataBase  DatabaseManager.cpp  DatabaseManager.h  DatabaseService.cpp  DatabaseService.h  HttpApiClient.cpp  HttpApiClient.h  MainWindow_Integration_Example.cpp  Models.cpp  Models.h  README.md  ThemeRepository.cpp  ThemeRepository.h  UserRepository.cpp  UserRepository.h
src/Database/: DataBaseManager.cpp  DataBaseManager.h
src/FileSystemOperations/FileDialog/: FileDialog.cpp  FileDialog.h
src/Global/: AppState.cpp  AppState.h
src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.qss
src/database/: DatabaseExample.cpp  DatabaseManager.cpp  DatabaseManager.h  DatabaseTest.cpp
src/utils/StyleLoader/: StyleReader.cpp  StyleReader.h
src/widgets/: CodeEditor.cpp  CodeEditor.h  KodetronEditor.cpp  KodetronEditor.h  KodetronTheme.h  LineNumberArea.h
src/widgets/Editor/EditorSection/: EditorSection.cpp  EditorSection.h  EditorSection.qss
src/widgets/Explorer/ExplorerCard/: ExplorerCard.cpp  ExplorerCard.h
src/widgets/Explorer/ExplorerSection/: ExplorerSection.cpp  ExplorerSection.h  ExplorerSection.qss
src/widgets/KodetronEditor/: KodetronEditor.cpp  KodetronEditor.h
src/widgets/Menu/MenuSection/: MenuSection.cpp  MenuSection.h  MenuSection.qss
src/widgets/StandardIO/ExecutionOptionsContainer/: ExecutionOptionsContainer.cpp  ExecutionOptionsContainer.h  ExecutionOptionsContainer.qss
src/widgets/StandardIO/StandardIOSection/: StandardIOSection.cpp  StandardIOSection.h  StandardIOSection.qss
src/widgets/Toolbar/Buttons/: SettingsModal.cpp  SettingsModal.h  SnippetsModal.cpp  SnippetsModal.h  TemplatesModal.cpp  TemplatesModal.h
src/widgets/Toolbar/ToolbarSection/: ToolbarSection.cpp  ToolbarSection.h  ToolbarSection.qss
src/widgets/menus/: FileMenuActions.cpp  FileMenuActions.h
src/widgets/toolbar/: ToolbarManager.cpp  ToolbarManager.h
tests/: CMakeLists.txt  test_Database.cpp  test_FileExitAction.cpp  test_FileNewAction.cpp  test_FileOpenAction.cpp  test_FileSaveAction.cpp  test_FileSaveAsAction.cpp
